--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Full Stack Developer Nanodegree  
+  uni: ICFAI
+  year: Jan, 2008 &mdash; January, 2013
   # awards:
   # summary:
